style/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');

*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	text-decoration: none;
	font-family: 'Montserrat', arial, sans-serif;
  }
body{
	font-family: 'Montserrat', arial, sans-serif;
}

html { 
	background: url("../images/background.jpeg") no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	blur: 8px;
  }

html, body {
	scroll-behavior: smooth;
}


label.logo{

	font-size: 35px;
	font-weight: bold;
	color: white;
	padding: 0 100px;
	line-height: 80px;
}

.wrapper{
	background: turquoise;
	position: fixed;
	width: 100%;
	z-index: 2;
  }
  .wrapper nav{
	position: relative;
	display: flex;
	max-width: calc(100% - 200px);
	margin: 0 auto;
	height: 70px;
	align-items: center;
	justify-content: space-between;
  }
  nav .content{
	display: flex;
	align-items: center;
  }
  nav .content .links{
	margin-left: 550px;
	display: flex;
  }
  .content .logo a{
	color: #fff;
	font-size: 30px;
	font-weight: 600;
  }
  .content .links li{
	list-style: none;
	line-height: 70px;
  }
  .content .links li a,
  .content .links li label{
	color: #fff;
	font-size: 18px;
	font-weight: 500;
	padding: 9px 17px;
	border-radius: 5px;
	transition: all 0.3s ease;
  }
  .content .links li label{
	display: none;
  }
  .content .links li a:hover,
  .content .links li label:hover{
	background: turquoise;
  }
  .wrapper .search-icon,
  .wrapper .menu-icon{
	color: #fff;
	font-size: 18px;
	cursor: pointer;
	line-height: 70px;
	width: 70px;
	text-align: center;
  }
  .wrapper .menu-icon{
	display: none;
  }
  .wrapper #show-search:checked ~ .search-icon i::before{
	content: "\f00d";
  }
  .wrapper .search-box{
	position: absolute;
	height: 100%;
	max-width: calc(100% - 50px);
	width: 100%;
	opacity: 0;
	pointer-events: none;
	transition: all 0.3s ease;
  }
  .wrapper #show-search:checked ~ .search-box{
	opacity: 1;
	pointer-events: auto;
  }
  .search-box input{
	width: 100%;
	height: 100%;
	border: none;
	outline: none;
	font-size: 17px;
	color: #fff;
	background: turquoise;
	padding: 0 100px 0 15px;
  }
  .search-box input::placeholder{
	color: white;
  }
  .search-box .go-icon{
	position: absolute;
	right: 10px;
	top: 50%;
	transform: translateY(-50%);
	line-height: 60px;
	width: 70px;
	background: turquoise;
	border: none;
	outline: none;
	color: #fff;
	font-size: 20px;
	cursor: pointer;
  }
  .wrapper input[type="checkbox"]{
	display: none;
  }
  /* Dropdown Menu code start */
  .content .links ul{
	position: absolute;
	background: darkturquoise;
	top: 80px;
	z-index: -1;
	opacity: 0;
	visibility: hidden;
  }
  .content .links li:hover > ul{
	top: 70px;
	opacity: 1;
	visibility: visible;
	transition: all 0.3s ease;
  }
  .content .links ul li a{
	display: block;
	width: 100%;
	line-height: 30px;
	border-radius: 0px!important;
  }
  .content .links ul ul{
	position: absolute;
	top: 0;
	right: calc(-100% + 8px);
  }
  .content .links ul li{
	position: relative;
  }
  .content .links ul li:hover ul{
	top: 0;
  }

.element {
    /*background:rgb(134, 226, 255);*/
    margin:10px;
	display: flex;
	align-items: center;

}

.
img {
    display:inline-block;
    vertical-align:middle;
}

.headings {
	padding-left: 20px;
	color: #fff;
}

.bg-box {
	text-color: #ffffff;
}

.box {
	background-color: rgba(0, 0, 0, 0.5);
	position: relative;
	width: 82%;
	left: 150px;
	transition: 1s;
	height: 400px;

}
.box:hover {
	transform: scale(1.1);
}

p {
    display:inline-block;
    margin:0px;
    width:70%;
	text-shadow: 0.07em 0 black, 0 0.07em black, -0.07em 0 black, 0 -0.07em black;
	font-size: 25px;

    /*vertical-align:middle;*/
}

.img_and_text {
	display: flex;
	align-items: center;
}



.buffer {
	width: 50px;
	height: 50px;
}



.index-parap {
	padding-left: 10px;

	color: #fff;
}

.service-image {

	display: inline;
	padding-right: 60px;
	padding-left: 25px;
}

.img-politehnica {
	padding-right: 60px;
	padding-left: 25px;
}

footer {
	position: relative;
}



#myBtn {
	width: 40px;
    line-height: 40px;
    overflow: hidden;
    z-index: 999;
    display: none;
    cursor: pointer;
    -moz-transform: rotate(270deg);
    -webkit-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
    position: fixed;
    bottom: 50px;
    right: 0;
    background-color: #DDD;
    color: #555;
    text-align: center;
    font-size: 30px;
    text-decoration: none;
}

#myBtn:hover {
	background-color: #DDF;
    color: #000;
}

/*Services Page styling starts here*/
.services-box {
	align: left;
	padding: 30px;
	background-color: rgba(0, 0, 0, 0.5);
	padding: 20px;
	width: 85%;
	position: relative;
	left: 5%;
}

.services-parap {
	padding-left: 20px;
	padding-top: 20px;

	color: #fff;
}

.services-img-laptop {
	width: 350px;
	height: 320px;
	padding: 15px;

}

.services-img-pc {
	width: 330px;
	height: 320px;
	padding: 15px;

}

.services-img-smart {
	width: 300px;
	height: 330px;
	padding: 15px;

}

.services-images {
	display: flex;
	justify-content: space-between;
	padding: 35px;

}

/*Services Subpages*/

.services-subpages {
	padding: 30px;
	background: rgba(0, 0, 0, 0.5);
	width: 40%;
	position: relative;
	left: 5%;
	color: white;
	text-shadow: 0.07em 0 black, 0 0.07em black, -0.07em 0 black, 0 -0.07em black;
	
}

.services-subpages ul {
	
	padding-top: 25px;
	padding-left: 45px;
	font-size: 20px;
}


/*Team Page*/

.team-box {
	background-color: rgba(0, 0, 0, 0.5);
	width: 70%;
	margin: auto;
}

.team-images img {
	width: 420px;
	height: 350px;
	margin: 10px;
	

}

.team-images {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}
.team-headings {
	text-align: center;
	padding-bottom: 30px;
	color: #fff;
}

.team-parap {
	color: #fff;
	text-align: center;
}

.par-box {
	padding-left: 250px;
	margin: 30px;
}

.team-button {
	margin:0 auto;
    display:block;
	border-radius: 15%;
	background-color: turquoise;
	padding: 20px;
	cursor: pointer;
	transition: all 200ms linear;
}

.team-button:hover {
	box-shadow: 0px 0px 6px 2px  grey;
}

/* Responsive code start */
@media screen and (max-width: 1250px){
	.wrapper nav{
	  max-width: 100%;
	  padding: 0 20px;
	}
	nav .content .links{
	  margin-left: 30px;
	}
	.content .links li a{
	  padding: 8px 13px;
	}
	.wrapper .search-box{
	  max-width: calc(100% - 100px);
	}
	.wrapper .search-box input{
	  padding: 0 100px 0 15px;
	}
  }
  @media screen and (max-width: 900px){
	.wrapper .menu-icon{
	  display: block;
	}
	.wrapper #show-menu:checked ~ .menu-icon i::before{
	  content: "\f00d";
	}
	nav .content .links{
	  display: block;
	  position: fixed;
	  background: #14181f;
	  height: 100%;
	  width: 100%;
	  top: 70px;
	  left: -100%;
	  margin-left: 0;
	  max-width: 350px;
	  overflow-y: auto;
	  padding-bottom: 100px;
	  transition: all 0.3s ease;
	}
	nav #show-menu:checked ~ .content .links{
	  left: 0%;
	}
	.content .links li{
	  margin: 15px 20px;
	}
	.content .links li a,
	.content .links li label{
	  line-height: 40px;
	  font-size: 20px;
	  display: block;
	  padding: 8px 18px;
	  cursor: pointer;
	}
	.content .links li a.desktop-link{
	  display: none;
	}
	/* dropdown responsive code start */
	.content .links ul,
	.content .links ul ul{
	  position: static;
	  opacity: 1;
	  visibility: visible;
	  background: none;
	  max-height: 0px;
	  overflow: hidden;
	}
	.content .links #show-features:checked ~ ul,
	.content .links #show-services:checked ~ ul,
	.content .links #show-items:checked ~ ul{
	  max-height: 100vh;
	}
	.content .links ul li{
	  margin: 7px 20px;
	}
	.content .links ul li a{
	  font-size: 18px;
	  line-height: 30px;
	  border-radius: 5px!important;
	}
  }
  @media screen and (max-width: 400px){
	.wrapper nav{
	  padding: 0 10px;
	}
	.content .logo a{
	  font-size: 27px;
	}
	.wrapper .search-box{
	  max-width: calc(100% - 70px);
	}
	.wrapper .search-box .go-icon{
	  width: 30px;
	  right: 0;
	}
	.wrapper .search-box input{
	  padding-right: 30px;
	}
  }

	section{
    	background: url(bg1.jpeg) no-repeat;
    	background-size: cover;
    	/*height: calc(100vh - 80px);*/
		

